Actualitzar els PluginsIBScanWeb de la v3.0.0 a la v4.0.0 https://github.com/GovernIB/digitalib/issues/129 Normalitzar classes de API ScanWEB, APiMassiveDigitalIB i camps de BBDD de DigitalIB https://github.com/GovernIB/pluginsib-scanweb/issues/27